--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/IMG_0490.jpg);"></div>
+				<div class="author-img" style="background-image: url(me.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Deanna Liu</a></h1>
 				<span class="position">Aspiring Cyber Security Analyst <br/> <a href="https:\\www.stonybrook.edu"> @Stony Brook University</a> </span>
 			</div>
