--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<p>I am from Guangzhou, China and currently residing in the busy New York City.</p>
 										<p>Introduced to coding and cyber security since I was a junior in high school, I've developed an interest for web development and cyber security.</p>
 										<p>Not to seem like I'm only interested in coding, but I like to dabble in the arts as well. I've been quite the artist ever since I was young and I've definitely improved a lot when it comes to drawing. I've learned a lot about myself ever since I started drawing, such as, I really like simple designs and how anything is that more "simple" is so much easier to understand. From these revelations, I have learned to incorporate many of my art skills into web development. How important is it to have an aesthetically pleasing yet simple graphical user interface?</p>
+										<p>I can also make realistic flowers out of crepe paper. Check it out in the gallery!</p>
 										<p>I've traveled quite the amount thanks to my parents, starting from touring around China and visiting LA, San Francisco, Orlando, Las Vegas, and etc... Though, I would really like to travel to Korea and Japan one day!</p>
 										<p>I am currently the graphic design director for my university's very own media/cultural club: <strong>ChinaBlue!</strong> Tune into WUSB 90.1 every Sunday!</p>
 
@@ -596,6 +597,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<img class="img-fluid img-thumbnail" src="images/fair%20(1).jpg" alt="Avatar" style="border-radius: 50%;">
+					</div>
+						<div class="col-lg-3 col-md-4 col-xs-6">
+						<img class="img-fluid img-thumbnail" src="images/flower1.jpg" alt="Avatar" style="border-radius: 50%;">
+					</div>
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<img class="img-fluid img-thumbnail" src="images/flower2.jpg" alt="Avatar" style="border-radius: 50%;">
+					</div>
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<img class="img-fluid img-thumbnail" src="images/pig.jpg" alt="Avatar" style="border-radius: 50%;">
+					</div>
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<img class="img-fluid img-thumbnail" src="images/piguits.jpg" alt="Avatar" style="border-radius: 50%;">
 					</div>
 				</div>
 
