--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-
-<style>
+		<style>
 			.hovereffect {
 				width: 100%;
 				height: 100%;
@@ -279,7 +278,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="100"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-								    <span>100%</span>
 								  	</div>
 								</div>
 							</div>
@@ -288,9 +286,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>Cantonese</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="100"
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="100"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-								    <span>100%</span>
 								  	</div>
 								</div>
 							</div>
@@ -299,9 +296,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>Mandarin</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
 								  	</div>
 								</div>
 							</div>
@@ -314,9 +310,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>Java</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="100"
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="100"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-								    <span>100%</span>
 								  	</div>
 								</div>
 							</div>
@@ -327,7 +322,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
@@ -336,9 +330,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>CSS</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
@@ -347,9 +340,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>HTML</h3>
 								<div class="progress">
-									<div class="progress-bar color-7" role="progressbar" aria-valuenow="90"
+									<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 										 aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										<span>90%</span>
 									</div>
 								</div>
 							</div>
@@ -358,9 +350,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>MIPS Assembly</h3>
 								<div class="progress">
-									<div class="progress-bar color-8" role="progressbar" aria-valuenow="90"
+									<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 										 aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										<span>90%</span>
 									</div>
 								</div>
 							</div>
@@ -369,9 +360,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="progress-wrap">
 								<h3>MYSQL/PHP</h3>
 								<div class="progress">
-									<div class="progress-bar color-9" role="progressbar" aria-valuenow="70"
+									<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 										 aria-valuemin="0" aria-valuemax="100" style="width:70%">
-										<span>70%</span>
 									</div>
 								</div>
 							</div>
@@ -384,9 +374,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="progress-wrap">
 							<h3>Windows 10</h3>
 							<div class="progress">
-								<div class="progress-bar color-1" role="progressbar" aria-valuenow="100"
+								<div class="progress-bar color-3" role="progressbar" aria-valuenow="100"
 									 aria-valuemin="0" aria-valuemax="100" style="width:100%">
-									<span>100%</span>
 								</div>
 							</div>
 						</div>
@@ -395,20 +384,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="progress-wrap">
 							<h3>macOS High Sierra</h3>
 							<div class="progress">
-								<div class="progress-bar color-2" role="progressbar" aria-valuenow="90"
+								<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
 									 aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									<span>90%</span>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 						<div class="progress-wrap">
-							<h3>Autodesk</h3>
+							<h3>Autodesk Inventor</h3>
 							<div class="progress">
 								<div class="progress-bar color-3" role="progressbar" aria-valuenow="100"
 									 aria-valuemin="0" aria-valuemax="100" style="width:100%">
-									<span>100%</span>
 								</div>
 							</div>
 						</div>
@@ -417,9 +404,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="progress-wrap">
 							<h3>Multisim 12.0</h3>
 							<div class="progress">
-								<div class="progress-bar color-4" role="progressbar" aria-valuenow="100"
+								<div class="progress-bar color-3" role="progressbar" aria-valuenow="100"
 									 aria-valuemin="0" aria-valuemax="100" style="width:100%">
-									<span>100%</span>
 								</div>
 							</div>
 						</div>
@@ -428,9 +414,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="progress-wrap">
 							<h3>Microsoft Office</h3>
 							<div class="progress">
-								<div class="progress-bar color-5" role="progressbar" aria-valuenow="100"
+								<div class="progress-bar color-3" role="progressbar" aria-valuenow="100"
 									 aria-valuemin="0" aria-valuemax="100" style="width:100%">
-									<span>100%</span>
 								</div>
 							</div>
 						</div>
@@ -483,6 +468,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 												<p><strong>Brooklyn Technical High School</strong> &nbsp Brooklyn, NY</p>
 												<ul>
 													<li>September 2012 - June 2016</li>
+													<li>Major: Software Engineering</li>
 													<li>Graduated with Honors in Computer Science and Math</li>
 												</ul>
 									    </div>
@@ -526,7 +512,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="">Administrative Assistant/Youth Mentor @CPC-Brooklyn</a> <span>July 2016 - August 2018</span></h2>
+					               	<h2><a href="https://www.cpc-nyc.org/programs/cpc-brooklyn-community-center">Administrative Assistant/Youth Mentor @CPC-Brooklyn</a> <span>July 2016 - August 2018</span></h2>
 					                 <p>CPC-Brooklyn, being a non-profit organization, provides youth services and employment to students ages 14-24 and each year there are 1000+ accepted applicants. I assisted staff and the youth's in the process for applications, scheduled weekly meetings and maintained the overall office documents.
 					               </div>
 					            </div>
@@ -576,7 +562,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/plot.gif); object-fit: fill">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="">Data Visualizer</a></h3>
+										<h3>Data Visualizer</h3>
 										<span>JavaFX Program</span>
 
 									</div>
@@ -587,7 +573,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/deannalib.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="">Library of Deanna</a></h3>
+										<h3>Library of Deanna</h3>
 										<span>Website in Progress</span>
 									</div>
 								</div>
@@ -597,7 +583,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/wordcount.gif);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="">Word Counter</a></h3>
+										<h3>Word Counter</h3>
 										<span>Java Program</span>
 									</div>
 								</div>
@@ -607,7 +593,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/sort.gif);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="">Sorting Algorithms</a></h3>
+										<h3>Sorting Algorithms</h3>
 										<span>Java Program</span>
 									</div>
 								</div>
@@ -617,7 +603,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/viz.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="">Parking Violations - Vizalytics</a></h3>
+										<h3>Parking Violations - Vizalytics</h3>
 										<span>Java Program</span>
 									</div>
 								</div>
@@ -627,7 +613,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/lettering.gif);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="">Lettering</a></h3>
+										<h3>Lettering</h3>
 										<span>Calligraphy</span>
 									</div>
 								</div>
@@ -680,7 +666,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="images/jamjam.jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 40%">
-									JAM.png
+									Spa Castle, Queens
 								</p>
 							</div>
 						</div>
@@ -690,7 +676,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="images/kcd.jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 40%">
-									KCD.png
+									Gym in KoreaTown, LA
 								</p>
 							</div>
 						</div>
