--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="images/airport.png" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 30%">
-									San Fransisco Airport
+									San Francisco Airport
 								</p>
 							</div>
 						</div>
@@ -736,7 +736,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="images/tower%20(1).jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 30%">
-									Japan Town in San Fransisco
+									Japan Town in San Francisco
 								</p>
 							</div>
 						</div>
@@ -746,7 +746,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="images/fair%20(1).jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 30%">
-									San Fransisco Exploratorium
+									San Francisco Exploratorium
 								</p>
 							</div>
 						</div>
