--- a/index.html
+++ b/index.html
@@ -693,10 +693,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 						<div class="hovereffect">
-							<img class="img-responsive" src="images/em.png" alt="Avatar" style="border-radius: 50%;">
+							<img class="img-responsive" src="graduation.jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 20%">
-									My sister, Emily graduating from Stuyvesant.
+									Graduating from BTHS at Barclays Center.
 								</p>
 							</div>
 						</div>
