--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="graduation.jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 20%">
-									Graduating from BTHS at Barclays Center.
+									Graduating from BTHS at Barclays Center
 								</p>
 							</div>
 						</div>
@@ -716,7 +716,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<img class="img-responsive" src="images/chapel.jpg" alt="Avatar" style="border-radius: 50%;">
 							<div class="overlay">
 								<p style="margin-top: 40%">
-									A chapel in Idaho
+									A chapel in Salt Lake City, Utah
 								</p>
 							</div>
 						</div>
